# LIMS

./: .gitignore  README.md  pyproject.toml
Documentation/Entwicklerdokumentation LIMS HTML/: .buildinfo  genindex.html  index.html  llm_interaction_manager.api.html  llm_interaction_manager.core.html  llm_interaction_manager.handlers.html  llm_interaction_manager.html  llm_interaction_manager.utils.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
Documentation/Entwicklerdokumentation LIMS HTML/_sources/: index.rst.txt  (+1 more)
docs/: conf.py  llm_interaction_manager.core.rst  llm_interaction_manager.rst  llm_interaction_manager.utils.rst
llm_interaction_manager/: __init__.py
llm_interaction_manager/api/: __init__.py  interaction_manager_factory.py  lims_interface.py
llm_interaction_manager/core/: __init__.py  conversation.py  interaction_manager.py
llm_interaction_manager/handlers/: __init__.py  chromadb_handler.py  data_handler_base.py  huggingface_handler.py  langchain_handler.py  llm_handler_base.py  mongodb_handler.py  persistent_data_handler_base.py  postgres_handler.py  vector_data_handler_base.py
llm_interaction_manager/utils/: __init__.py  config_example.json  data_schemas_example.json  settings.py  settings_handler.py
tests/integration/: test_end_to_end.py  test_interaction_manager_integration.py
tests/unit/: test_chromadb_handler.py  test_conversation.py  test_huggingface_handler.py  test_interaction_manager.py  test_langchain_handler.py  test_mongodb_handler.py  test_postgres_handler.py  test_settings_handler.py
(+8 files in other folders)
