[project]
name = "llm-interaction-manager"
version = "0.1.0"
description = "Interface for connecting various LLM interfaces with Vector and Persistent Databases for storage and RAG functions"
authors = [
    {name = "Marvin Emrich",email = "memrich@proton.me"}
]
license = {text = "GPL v3"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "chromadb (>=1.2.1,<2.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "huggingface-hub (>=0.36.0,<0.37.0)",
    "langchain-together (>=0.3.1,<0.4.0)",
    "together (>=1.5.29,<2.0.0)",
    "pymongo (>=4.15.3,<5.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
